<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\'m a Button</string>
    <string name="login_message">login</string>
    <string name="password_message">password</string>
    <string name="switch_message">What does this do?</string>
    <string name="loginButton">Login</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish Activity</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="startChatButton_message">Start Chat</string>
    <string name="incomingText">New Text</string>
    <string name="outgoingText">New Text</string>
    <string name="sendButton_message">Send</string>
    <string name="weatherButton_message">WeatherForecast</string>
    <string name="messageTextView_message">MessageHere</string>
    <string name="idTextView_message">ID=</string>
    <string name="deleteMsgButton_message">delete this message</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <string name="title_activity_xxx">xxx</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="choice1">Choice 1</string>
    <string name="choice2">Choice 2</string>
    <string name="choice3">Choice 3</string>
    <string name="testToolbarButton">Test Toolbar</string>
    <string name="about">About</string>
    <string name="newMessage">New Message</string>

</resources>