<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_one"
        android:title="@string/choice1"
        android:icon="@drawable/home"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_two"
        android:title="@string/choice2"
        android:icon="@drawable/chat"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_three"
        android:title="@string/choice3"
        android:icon="@drawable/music"
        android:orderInCategory="101"
        app:showAsAction="always" />

    <item android:id="@+id/action_four"
        android:title="@string/about"
        android:orderInCategory="101"
        app:showAsAction="never" />



</menu>