<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/messageTextView"
        android:text="@string/messageTextView_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_gravity="left|top"/>

    <TextView
        android:id="@+id/idTextView"
        android:text="@string/idTextView_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/deleteMsgButton"
        android:text="@string/deleteMsgButton_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left|bottom"/>



</FrameLayout >
